# libtmx

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
examples/: CMakeLists.txt  main.c
include/: tmx.h
include/TMX/: cache.h  compression.h  error.h  memory.h  tmx.h  typedefs.h
include/tmx/: cache.h  common.h  compression.h  debug.h  error.h  file.h  memory.h  properties.h  types.h  xml.h
src/: cache.c  common.c  compression.c  error.c  file.c  internal.h  map.c  memory.c  miniz.h  parse.c  parse.h  parse_json.c  parse_xml.c  properties.c  uthash.h  utils.c  utils.h  words.h  xml.c  yxml.h  zstd.c
